<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginBottom="606dp"
        android:background="#1e4072"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/prac_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginEnd="137dp"
            android:layout_marginRight="137dp"
            android:fontFamily="@font/spartan_extrabold"
            android:gravity="center"
            android:text="@string/prac_register_title"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.493" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/reg_clinic_name"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/clinic_name_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <EditText
        android:id="@+id/reg_clinic_address"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/clinic_address_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_clinic_name" />

    <Button
        android:id="@+id/prac_reg_button"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:background="#1E4072"
        android:fontFamily="@font/spartan_extrabold"
        android:onClick="onButtonClick"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_contact_email"
        app:layout_constraintVertical_bias="0.452" />

    <EditText
        android:id="@+id/reg_contact_email"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/contact_email_title"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_phone_number" />

    <EditText
        android:id="@+id/reg_phone_number"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/phone_number_title"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_clinic_address" />
</androidx.constraintlayout.widget.ConstraintLayout>