<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/prac_select_text"
        android:layout_width="347dp"
        android:layout_height="44dp"
        android:fontFamily="@font/spartan_medium"
        android:text="@string/prac_select"
        android:textColor="#1E4072"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintVertical_bias="0.626" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginBottom="606dp"
        android:background="#1e4072"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/prac_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginEnd="137dp"
            android:layout_marginRight="137dp"
            android:fontFamily="@font/spartan_extrabold"
            android:gravity="center"
            android:text="@string/Register"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.654" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Switch
        android:id="@+id/practitioner_switch"
        android:layout_width="361dp"
        android:layout_height="31dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/prac_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_prac_spinner"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/reg_phone_number"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/email_address_title"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_clinic_address" />

    <EditText
        android:id="@+id/reg_clinic_name"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <Button
        android:id="@+id/register_next_button"
        android:layout_width="146dp"
        android:layout_height="58dp"
        android:background="#1E4072"
        android:fontFamily="@font/spartan_extrabold"
        android:onClick="onButtonClick"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practitioner_switch"
        app:layout_constraintVertical_bias="0.177" />

    <EditText
        android:id="@+id/reg_password_confirm"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_blank" />

    <EditText
        android:id="@+id/reg_password_blank"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password_blank"
        android:inputType="textPassword"
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_phone_number" />

    <EditText
        android:id="@+id/reg_clinic_address"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_clinic_name" />

    <ProgressBar
        android:id="@+id/reg_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintVertical_bias="0.43" />

    <Spinner
        android:id="@+id/reg_prac_spinner"
        android:layout_width="362dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_confirm"
        app:layout_constraintVertical_bias="0.285" />

</androidx.constraintlayout.widget.ConstraintLayout>