<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:visibility="visible"
    tools:context=".PractitionerPageActivity"
    tools:openDrawer="start"
    tools:visibility="visible">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="visible"
        app:headerLayout="@layout/header"
        app:menu="@menu/nav_drawer_menu"
        tools:visibility="visible">
    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:background="#1E4072"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/top_bar_text"
                android:layout_width="338dp"
                android:layout_height="47dp"
                android:fontFamily="@font/spartan_extrabold"
                android:gravity="center"
                android:text="@string/pract_page_title"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/clinic_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:fontFamily="@font/spartan_extrabold"
            android:text="@string/clinic_name_title"
            android:textColor="#1E4072"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar"
            app:layout_constraintVertical_bias="0.129" />

        <TextView
            android:id="@+id/clinic_name_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/spartan_extrabold"
            android:text="@string/clinic_address_title"
            android:textColor="#1E4072"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clinic_name_title"
            app:layout_constraintVertical_bias="0.033" />

        <TextView
            android:id="@+id/clinic_name_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_extrabold"
            android:text="@string/phone_number_title"
            android:textColor="#1E4072"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clinic_name_title2"
            app:layout_constraintVertical_bias="0.205" />

        <TextView
            android:id="@+id/clinic_name_title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_extrabold"
            android:text="@string/email_address_title"
            android:textColor="#1E4072"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clinic_name_title3"
            app:layout_constraintVertical_bias="0.303" />

        <TextView
            android:id="@+id/prac_name_blank"
            android:layout_width="215dp"
            android:layout_height="45dp"
            android:fontFamily="@font/spartan_extrabold"
            android:gravity="center"
            android:text="N/A"
            android:textColor="#1E4072"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar"
            app:layout_constraintVertical_bias="0.163" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>