<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_extrabold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#1e4072"
            android:textColorLink="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar"
            app:layout_constraintVertical_bias="0.126" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginBottom="606dp"
            android:background="#1e4072"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="413dp"
            android:layout_height="175dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/login_button"
                android:layout_width="144dp"
                android:layout_height="49dp"
                android:layout_marginStart="137dp"
                android:layout_marginLeft="137dp"
                android:layout_marginEnd="138dp"
                android:layout_marginRight="138dp"
                android:background="#1E4072"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/login_button"
                android:textColor="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="120dp"
                android:layout_height="39dp"
                android:layout_marginStart="142dp"
                android:layout_marginLeft="142dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="143dp"
                android:layout_marginRight="143dp"
                android:background="#1E4072"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/register_button"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_info"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.248">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="378dp"
                android:layout_height="44dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/email_address_title"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/login_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="378dp"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="48dp"
                android:ems="10"
                android:hint="@string/password_blank"
                android:inputType="textPassword"
                android:password="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_email" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
