<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:visibility="visible"
    tools:context=".PatientTrendsActivity"
    tools:openDrawer="start"
    tools:visibility="visible">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="visible"
        app:headerLayout="@layout/header"
        app:menu="@menu/nav_drawer_menu"
        tools:visibility="visible">
    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:background="#1E4072"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/top_bar_text"
                android:layout_width="338dp"
                android:layout_height="47dp"
                android:fontFamily="@font/spartan_extrabold"
                android:gravity="center"
                android:text="@string/glucose_trends_title"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Spinner
            android:id="@+id/trend_time_period"
            android:layout_width="229dp"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar"
            app:layout_constraintVertical_bias="0.078" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="367dp"
            android:layout_height="197dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trend_time_period"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/daily_average_label"
            android:layout_width="274dp"
            android:layout_height="48dp"
            android:fontFamily="@font/spartan_extrabold"
            android:text="@string/daily_average_title"
            android:textColor="#1E4072"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graph"
            app:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/morning_average_label"
            android:layout_width="306dp"
            android:layout_height="53dp"
            android:fontFamily="@font/spartan_extrabold"
            android:text="@string/morning_average_title"
            android:textColor="#1E4072"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daily_average_label"
            app:layout_constraintVertical_bias="0.097" />

        <TextView
            android:id="@+id/afternoon_average_label"
            android:layout_width="329dp"
            android:layout_height="50dp"
            android:fontFamily="@font/spartan_extrabold"
            android:text="@string/afternoon_average_title"
            android:textColor="#1E4072"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/morning_average_label"
            app:layout_constraintVertical_bias="0.124" />

        <TextView
            android:id="@+id/nightime_average_label"
            android:layout_width="329dp"
            android:layout_height="50dp"
            android:fontFamily="@font/spartan_extrabold"
            android:text="@string/nighttime_average_title"
            android:textColor="#1E4072"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/afternoon_average_label"
            app:layout_constraintVertical_bias="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>